pronosticos alta, estilos, inicio, imagenes

--- a/src/app/inicio-administrador/inicio-administrador.page.html
+++ b/src/app/inicio-administrador/inicio-administrador.page.html
@@ -4,30 +4,30 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="bg-image no-scroll">
+<ion-content class="bg-image-black no-scroll">
   <!-- List of Text Items -->
-  <ion-list>
+  <ion-list class="bg-image-black-transparent">
     <ion-item class="item" (click)="listaDeCompetencias()">
       <img class="icon" src="assets/icon/list-check-solid.svg">
-      <ion-label >Todas las competencias del mundo</ion-label>
+      <ion-label class="text-white">Todas las competencias del mundo</ion-label>
     </ion-item>
     <ion-item class="item" (click)="miListaDeCompetencias()">
       <img class="icon" src="assets/icon/list-check-solid.svg">
-      <ion-label >Mi lista de competencias</ion-label>
+      <ion-label class="text-white">Mi lista de competencias</ion-label>
     </ion-item>
     <ion-item class="item" (click)="listaDeUsers()">
       <img class="icon" src="assets/icon/list-check-solid.svg">
-      <ion-label >Listado de usuario registrados</ion-label>
+      <ion-label class="text-white">Listado de usuario registrados</ion-label>
     </ion-item>
     <ion-item class="item" (click)="irEditEnfrentamientos()">
-      <ion-label>Modificar enfrentamientos</ion-label>
+      <ion-label class="text-white">Modificar enfrentamientos</ion-label>
     </ion-item>
     <ion-item class="item" (click)="irRegistro()">
       <img class="icon" src="assets/icon/list-check-solid.svg">
-      <ion-label>Alta de usuario</ion-label>
+      <ion-label class="text-white">Alta de usuario</ion-label>
     </ion-item>
     <ion-item class="item" (click)="competencias()">
-      <ion-label>Competencias</ion-label>
+      <ion-label class="text-white">Competencias</ion-label>
     </ion-item>
   </ion-list>
 </ion-content>
