--- a/src/app/logueo/logueo.page.scss
+++ b/src/app/logueo/logueo.page.scss
@@ -1,3 +1,13 @@
 ion-button {
   --background: var(--ion-color-primary);
 }
+
+.item{
+  border-radius: 1rem;
+  --ion-background-color: #0B0B0B;
+}
+
+.text-input{
+  color: white;
+  font-size: 1.2rem;
+}
