--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,4 +1,4 @@
-<ion-content >
+<ion-content class="bg-image-black no-scroll">
   <div class="center-icon-loading" >
     <img src='assets/img/loader2.svg'>
     <h1 style="color: #F26633"> CARGANDO... </h1>
