--- a/src/app/list-enfrentamientos/list-enfrentamientos.page.html
+++ b/src/app/list-enfrentamientos/list-enfrentamientos.page.html
@@ -3,11 +3,12 @@
     <ion-buttons slot="start">
       <ion-button (click)="volver()">
         <ion-icon name="arrow-back-outline"></ion-icon>
+        <ion-title class="text-header">TUS PRONOSTICOS</ion-title>
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
-<ion-row>
+<ion-row *ngIf="isCargandoPartidos">
   <ion-col [size]="1"></ion-col>
   <ion-col [size]="10">
     <p class="text-carga" *ngIf="isCargandoPartidos"> Cargando partidos, aguarde por favor... </p>
@@ -24,15 +25,7 @@
     <app-animation-progress ></app-animation-progress>
     <app-animation-progress ></app-animation-progress>
   </div>
-
-  <ion-col [size]="12">
-    <ion-row *ngFor="let item of partidosPronosticados">
-      <ion-col [size]="4"> {{item.userName}}  </ion-col>
-      <ion-col [size]="4"> {{item.golVisitante}}</ion-col>
-      <ion-col [size]="4"> {{item.golLocal}} </ion-col>
-
-    </ion-row>
-  </ion-col>
+  
 <ion-col [size]="12">
   <ion-row>
     <ion-select [(ngModel)]="fechaCompara" (ngModelChange)="fechaEvent($event)" placeholder="Jornada">
@@ -42,7 +35,6 @@
     </ion-select>
   </ion-row>
 </ion-col>
-
   <ion-card *ngFor="let part of partidos" class="ion-no-margin ion-no-padding">
     <ion-fab slot="fixed">
       <ion-fab-button>GUARDAR PRONOSTICO 1</ion-fab-button>
@@ -66,9 +58,17 @@
           </ion-item>
         </ion-col>
       </ion-row>
+      <ion-row class="ion-no-padding ion-no-margin">
+        <ion-col [size]="8" class="ion-no-padding ion-no-margin">
 
+        </ion-col>
+        <ion-col size="4" class="ion-no-padding ion-no-margin">
+            <p  class="ion-no-margin text-tu-pronostico" *ngIf="part.golesVisitPronosticado != null || part.golesLocalPronosticado != null">TU PRONÓSTICO</p>
+             <p  class="ion-no-margin text-tu-pronostico" *ngIf="part.golesVisitPronosticado == null || part.golesLocalPronosticado == null"> PRONOSTICÁ </p>
+        </ion-col>
+      </ion-row>
+      
       <ion-row class="general">
-
         <ion-col *ngIf="part.short.includes('Finished') || part.short.includes('FT') || part.short.includes('PEN')"
           [size]="1" class=" ion-no-margin ion-no-padding col-puntaje">
           <ion-row class="puntaje-obtenido">
@@ -77,45 +77,59 @@
         </ion-col>
 
         <ion-col [size]="11">
-          <ion-row class="row-local">
-            <ion-col [size]="0.5">
+          <ion-row>
+            <ion-col [size]="1">
               <ion-row>
                 <ion-label class="text-resultado-culminado">{{part.golLocal}}</ion-label>
-                <ion-label class="text-resultado-culminado-penales" *ngIf="part.penalesLocal != null || part.penalesLocal  != undefined">{{part.penalesLocal }}</ion-label>
+                <ion-label class="text-resultado-culminado-penales" *ngIf="part.penalesLocal!= null || part.penalesLocal != undefined">{{part.penalesLocal}}</ion-label>
               </ion-row>
             </ion-col>
-            <ion-col [size]="11.5" class="col-local">
+            <ion-col [size]="8" class="col-equipos">
               <ion-item class="ion-activated">
-                <ion-label [ngClass]="part.ganaLocal?'text-negrita':'text-normal'"> <img class="logo-equipo" src="{{part.logoLocal}}"> {{part.nameLocal}} </ion-label>
-                <ion-icon name="remove-circle-outline" slot="end" size="small" (click)="calcularResultado(part.idLocal, part.idVisit, part.idEnfrentamiento, false, true)"></ion-icon>
-                <ion-label slot="end"><p *ngIf="idEquipoLocal === part.idLocal">{{this.golesLocal}}</p></ion-label>
-                <ion-icon name="add-circle-outline" slot="end" size="small" (click)="calcularResultado(part.idLocal, part.idVisit, part.idEnfrentamiento, true, true)"></ion-icon>
+                <ion-label [ngClass]="part.ganaLocal?'text-negrita ':'text-normal'"> <img class="logo-equipo" src="{{part.logoLocal}}"> {{part.nameLocal}}</ion-label>
               </ion-item>
+            </ion-col>
+            <ion-col [size]="1" class="col-equipos">
+              <ion-icon class="icon-operacion-result" name="remove-circle-outline"  size="small" (click)="guardarPronosticosHechos(part, false, true)"></ion-icon>
+            </ion-col>
+            <ion-col [size]="1" class="col-equipos">
+              <ion-label class="label-result-pronosticado"><p class="number-result-pronosticado" *ngIf="part.golesLocalPronosticado != null || part.golesLocalPronosticado != undefined">{{part.golesLocalPronosticado}}</p></ion-label>
+            </ion-col>
+
+            <ion-col [size]="1" class="col-equipos">
+              <ion-icon class="icon-operacion-result" name="add-circle-outline"  size="small" (click)="guardarPronosticosHechos(part, true, true)"></ion-icon>
             </ion-col>
           </ion-row>
 
-          <ion-row class="row-visitante">
-            <ion-col [size]="0.5">
+          <ion-row>
+            <ion-col [size]="1">
               <ion-row>
                 <ion-label class="text-resultado-culminado">{{part.golVisit}}</ion-label>
                 <ion-label class="text-resultado-culminado-penales" *ngIf="part.penalesVisit!= null || part.penalesVisit != undefined">{{part.penalesVisit}}</ion-label>
               </ion-row>
             </ion-col>
-            <ion-col [size]="11.5" class="col-visitante">
+            <ion-col [size]="8" class="col-equipos">
               <ion-item class="ion-activated">
                 <ion-label [ngClass]="part.ganaVisit?'text-negrita ':'text-normal'"> <img class="logo-equipo" src="{{part.logoVisit}}"> {{part.nameVisit}}</ion-label>
-                <ion-icon name="remove-circle-outline" slot="end" size="small" (click)="calcularResultado(part.idLocal, part.idVisit, part.idEnfrentamiento, false, false)"></ion-icon>
-                <ion-label slot="end"><p *ngIf="idEquipoVisitante === part.idVisit">{{this.golesVisitante}}</p></ion-label>
-                <ion-icon name="add-circle-outline" slot="end" size="small" (click)="calcularResultado(part.idLocal, part.idVisit, part.idEnfrentamiento, true, false)"></ion-icon>
               </ion-item>
             </ion-col>
+            <ion-col [size]="1" class="col-equipos">
+                <ion-icon class="icon-operacion-result" name="remove-circle-outline"  size="small" (click)="guardarPronosticosHechos(part, false, false)"></ion-icon>
+            </ion-col>
+            <ion-col [size]="1" class="col-equipos">
+              <ion-label class="label-result-pronosticado"><p class="number-result-pronosticado" *ngIf="part.golesVisitPronosticado != null || part.golesVisitPronosticado != undefined">{{part.golesVisitPronosticado}}</p></ion-label>
+            </ion-col>
+            
+              <ion-col [size]="1" class="col-equipos">
+                <ion-icon class="icon-operacion-result" name="add-circle-outline"  size="small" (click)="guardarPronosticosHechos(part, true, false)"></ion-icon>
+              </ion-col>
           </ion-row>
         </ion-col>
       </ion-row>
       
     </ion-grid>
   </ion-card>
-  
+
   <ion-row>
     <ion-button (click)="guardarPronosticos()">
       guardar resultados
