--- a/src/app/list-enfrentamientos/list-enfrentamientos.page.scss
+++ b/src/app/list-enfrentamientos/list-enfrentamientos.page.scss
@@ -76,9 +76,11 @@ display: flex;
 
 .text-tu-pronostico{
   padding-top: 0.5rem;
-  padding-right: 4px;
+
   font-weight: 600;
   text-align: right;
+  font-size: 0.7rem;
+  padding-right: 4px;
   color: var(--ion-color-primary);
 }
 .text-resultado-culminado-penales{
