--- a/src/app/list-competencias/list-competencias.page.html
+++ b/src/app/list-competencias/list-competencias.page.html
@@ -12,7 +12,7 @@
 <ion-header *ngIf="!isCargando">
     <ion-searchbar class="ion-no-margin ion-no-padding searchbar" placeholder="Buscar..." [(ngModel)]="filterTerm"
                    animated="true"></ion-searchbar>
-  <p class="ion-no-margin text-aclaracion">Seleccione las competencias que desea sumar a su lista que luego va a activar para que el usuario pueda realizar sus pronosticos</p>
+  <p class="ion-no-margin text-aclaracion">Seleccione las competencias que desea sumar para que el usuario pueda pronosticar</p>
   <ion-col>
     <ion-button (click)="irListaComp()" color="primary" expand="block">Ir a mi lista</ion-button>
   </ion-col>
@@ -63,11 +63,18 @@
               <ion-label class="text-competencias">{{competencia.league.name}}</ion-label>
             </ion-col>
             <ion-col class='col-grid ion-no-margin ion-no-padding' [size]="1">
-              <ion-checkbox value="option" (ionChange)="isChecked(competencia, $event)" name="option"></ion-checkbox>
+              <ion-checkbox value="option" [(ngModel)]="competencia.league.isActiva" (click)="isChecked(competencia)" name="option"></ion-checkbox>
             </ion-col>
           </ion-row>
         </ion-item>
       </ion-list>
     </ion-col>
+    <ion-col [size]="12" class="display-flex">
+      <ion-button class="margin-auto" size="medium" color="primary" (click)="verMas()">
+        <p>Ver más competencias</p>
+      </ion-button>
+    
+    </ion-col>
+    
   </ion-row>
 </ion-content>
