--- a/src/app/partidos/partidos.page.html
+++ b/src/app/partidos/partidos.page.html
@@ -13,34 +13,24 @@
 
 <ion-content class="bg-image no-scroll">
     <ion-row>
-        <ion-col [size]="6">
-            <ion-button (click)="buscarGrupo()">
-                <p>BUSCAR GRUPO</p>
+        <ion-col class="display-flex" [size]="6">
+            <ion-button class="margin-auto" (click)="buscarGrupo()">
+                <ion-icon name="search-outline"></ion-icon>
+                <p> BUSCAR GRUPO</p>
             </ion-button>
         </ion-col>
-        <ion-col [size]="6">
-            <ion-button (click)="crearGrupo()">
-                <p> + CREAR GRUPO</p>
+        <ion-col [size]="6" class="display-flex">
+            <ion-button class="margin-auto" (click)="crearGrupo()">
+                <ion-icon name="add-outline"></ion-icon>
+                <p> CREAR GRUPO</p>
             </ion-button>
         </ion-col>
     </ion-row>
    
     <ion-row>
         <ion-col *ngIf="isCargando" [size]="12">
-            <p class="text-carga text-white"> Cargando, aguarde por favor... </p>
+            <p class="text-carga text-white"> Cargando grupos, aguarde por favor... </p>
             <ion-progress-bar color="primary" class="barra-progreso" type="indeterminate"></ion-progress-bar>
-        </ion-col>
-    </ion-row>
-
-    <ion-row>
-        <ion-col [size]="12" *ngIf="isCargando">
-            <app-animation-progress></app-animation-progress>
-            <app-animation-progress></app-animation-progress>
-            <app-animation-progress></app-animation-progress>
-            <app-animation-progress></app-animation-progress>
-            <app-animation-progress></app-animation-progress>
-            <app-animation-progress></app-animation-progress>
-            <app-animation-progress></app-animation-progress>
         </ion-col>
     </ion-row>
     
@@ -48,13 +38,13 @@
         <ion-row  *ngFor="let grupo of gruposDelUser">
             <ion-col [size]="12">
                 <ion-list>
-                    <ion-item>
-                        <a *ngIf="grupo.idUserCreador == this.idUserGreaGrupo"> <ion-badge class="text-white">Creador </ion-badge> </a>
-                        <ion-label class="text-white"> {{grupo.nameGrupo}}</ion-label>
+                    <ion-item class="border-light">
+                        <a *ngIf="grupo.idUserCreador == this.idUserGreaGrupo"> <ion-badge class="text-white" style="margin-right: 1rem">Creador </ion-badge> </a>
+                        <p class="text-white"> {{grupo.nameGrupo}}</p>
                         <ion-button *ngIf="grupo.idUserCreador != this.idUserGreaGrupo" (click)="salirDelGrupo(grupo)" slot="end" color="warning">
                             SALIR DEL GRUPO
                         </ion-button>
-                        <ion-button *ngIf="grupo.idUserCreador == this.idUserGreaGrupo" (click)="borrarGrupo(grupo)" slot="end" color="danger">
+                        <ion-button *ngIf="grupo.idUserCreador == this.idUserGreaGrupo" (click)="borrarGrupo(grupo)" slot="end" color="danger" >
                             ELIMINAR GRUPO
                         </ion-button>
                     </ion-item>
