--- a/src/app/registro/registro.page.html
+++ b/src/app/registro/registro.page.html
@@ -4,51 +4,65 @@
       <ion-button (click)="volver()">
         <ion-icon name="arrow-back-outline"></ion-icon>
       </ion-button>
+      <ion-title class="text-header">Registro</ion-title>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="bg-image no-scroll desenfoque">
+  <ion-row>
+    <ion-col [size]="12" class="display-flex " style="padding-top: 2rem">
+      <p class="margin-auto"> <img src="./assets/img/profile-circle.png" class="margin-auto" height="80px" width="90px"> </p>
+    </ion-col>
 
+  </ion-row>
 
   <form>
-    <div padding>
-      <ion-row>
-        <ion-col style="text-align: center" >
-          <ion-label class="label">Nombre: </ion-label>
-        </ion-col>
-        <ion-item>
-          <ion-input name="name" [(ngModel)]="user.name" type="text" class="form-control" placeholder="Julian" ngModel required></ion-input>
-        </ion-item>
+    <div class="ion-margin">
+      <ion-row style="padding-top: 1rem" class="text">
+        <ion-label class="label">Nombre: </ion-label>
       </ion-row>
-      <ion-row>
-        <ion-col style="text-align: center" >
-          <ion-label class="label">Usuario: </ion-label>
+      <ion-row justify-content-center>
+        <ion-col align-self-center [size]="12">
+          <ion-item class="item">
+            <ion-input name="name" [(ngModel)]="user.name" type="email" class="form-control" placeholder="Julian" ngModel required></ion-input>
+          </ion-item>
         </ion-col>
-        <ion-item>
-          <ion-input name="userName" [(ngModel)]="user.userName" type="text" class="form-control" placeholder="Juan56" ngModel required></ion-input>
-        </ion-item>
       </ion-row>
-      <ion-row>
-        <ion-col style="text-align: center" >
-          <ion-label class="label">Email: </ion-label>
-        </ion-col>
-        <ion-item>
-          <ion-input name="email" [(ngModel)]="user.email"  type="email" class="form-control" placeholder="julicapponi@hotmail.com" ngModel required></ion-input>
-        </ion-item>
+      <ion-row style="padding-top: 1rem" class="text">
+        <ion-label class="label">Usuario: </ion-label>
       </ion-row>
-      <ion-row>
-        <ion-col style="text-align: center">
-          <ion-label class="label">Contraseña: </ion-label>
+      <ion-row justify-content-center>
+        <ion-col align-self-center [size]="12">
+          <ion-item class="item">
+            <ion-input name="userName" [(ngModel)]="user.userName" type="text" class="form-control" placeholder="Juan56" ngModel required></ion-input>
+          </ion-item>
         </ion-col>
-        <ion-item>
-          <ion-input name="password" [(ngModel)]="user.password" type="password" class="form-control" placeholder="Contraseña" ngModel required></ion-input>
-        </ion-item>
+      </ion-row>
+      <ion-row style="padding-top: 1rem" class="text">
+        <ion-label class="label">Email: </ion-label>
+      </ion-row>
+      <ion-row justify-content-center>
+        <ion-col align-self-center [size]="12">
+          <ion-item class="item">
+            <ion-input name="email" [(ngModel)]="user.email"  type="email" class="form-control" placeholder="julicapponi@hotmail.com" ngModel required></ion-input>
+          </ion-item>
+        </ion-col>
       </ion-row>
 
+      <ion-row style="padding-top: 1rem" class="text">
+        <ion-label class="label">Contraseña: </ion-label>
+      </ion-row>
+      <ion-row justify-content-center>
+        <ion-col align-self-center [size]="12">
+          <ion-item class="item">
+            <ion-input name="password" [(ngModel)]="user.password" type="password" class="form-control" placeholder="Contraseña" ngModel required></ion-input>
+          </ion-item>
+        </ion-col>
+      </ion-row>
     </div>
-    <div padding>
-      <ion-button  size="large" (click)="signUp(user)" expand="block">Registrar</ion-button>
+    <div class="ion-margin display-flex" >
+      <ion-button class="margin-auto" size="medium" (click)="signUp(user)" expand="block">Registrar</ion-button>
     </div>
   </form>
 </ion-content>
