--- a/src/global.scss
+++ b/src/global.scss
@@ -72,7 +72,10 @@
 .container-options-inicio{
   display: flex;
   margin: 0.5rem;
-  border-radius: 1rem;  
+  border-radius: 1rem;
+  position:relative;
+  overflow:hidden;
+  height: auto;
 }
 
 .contenido-options-inicio{
@@ -109,6 +112,11 @@
 .margin-auto{
   margin: auto;
 }
+
+.load-gif{
+  padding-top: 0.5rem;
+}
+
 ion-content{
   //background-image: url("paper.gif");
   --ion-background-color:white ;
