--- a/src/app/list-users/list-users.page.html
+++ b/src/app/list-users/list-users.page.html
@@ -53,12 +53,12 @@
                 </ion-col>
                 <ion-col class='col-grid ion-no-margin ion-no-padding' [size]="2">
                   <ion-button style="text-align: center" (click)="editarUser(user)">
-                    <img src='assets/icon/edit.png'>
+                    <ion-icon name="create-outline"></ion-icon>
                   </ion-button>
                 </ion-col>
                 <ion-col class='col-grid ion-no-margin ion-no-padding' [size]="2">
                   <ion-button style="text-align: center" (click)="borrarUser(user)">
-                    <img src='assets/icon/delete.png'>
+                    <img class="icon-delete" src='assets/icon/delete.png'>
                   </ion-button>
                 </ion-col>
               </ion-row>
