--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,9 +1,9 @@
 <ion-menu contentId="main-content">
-  <ion-header>
-    <ion-toolbar color="primary">
-      <ion-title class="text-header-menu ion-no-margin"> <img src="./assets/img/profile-circle.png" class="margin-auto" height="50px" width="60px"> </ion-title>
-      <ion-title class="text-header-menu" color="light"><ion-icon name="mail-outline"></ion-icon> {{user}}</ion-title>
-      <ion-title class="text-header-menu" color="light"> <ion-icon name="person-outline"></ion-icon> {{name}}</ion-title>
+  <ion-header >
+    <ion-toolbar color="primary" class="header-menu">
+      <ion-title class="text-header-menu margin-auto"> <img src="./assets/img/profile-circle.png" height="50px" width="60px"> </ion-title>
+      <!--<ion-title class="text-header-menu" color="light"><ion-icon name="mail-outline"></ion-icon> {{user}}</ion-title>
+      <ion-title class="text-header-menu" color="light"> <ion-icon name="person-outline"></ion-icon> {{name}}</ion-title>-->
     </ion-toolbar>
   </ion-header>
   <ion-content color="dark">
