--- a/src/global.scss
+++ b/src/global.scss
@@ -53,8 +53,9 @@
 }
 
 .content-select{
-  background-color: black;  
-  --ion-background-color: black;
+  background-color: #090c11;  
+  --ion-background-color: #090c11;
+  height: 4rem;
 }
 
 .text-size-medium{
